# Roadef_challenge_2026-v2

./: CMakeLists.txt  DataAnalysis.cpp  DataAnalysis.h  Methods and objects to be used  check  main.cpp  readerInstance.cpp  readerInstance.h  solution.cpp  solution.h  solution.json  solver.cpp  solver.h  utilities.cpp  utilities.h  visualizer.py
challenge-roadef-2026-main/checker/src/: checker.h  config.h  types.h  validation.h
networktools-main/: .clang-format  CONTRIBUTING.md  CONTRIBUTORS.md  README.md
networktools-main/data/: simple.json
networktools-main/networktools/: networktools_demo.cpp  ntconfig.h
networktools-main/networktools/core/: arrays.h  common.h  json.h  quick_heap.h  random.h
networktools-main/networktools/graphs/: csr_graph.h  graph_maps.h  mutable_graph.h  path.h  tools.h
networktools-main/networktools/mp/: mp_cbc.h  mp_clp.h  (+4 more)
src/: Debug.cpp  Debug.h  Demand.h  ECMP.cpp  ECMP.h  Graph.h  KShortest.cpp  KShortest.h  MLU.cpp  MLU.h  NetworkContext.cpp  NetworkContext.h  Scenario.h  WaypointEnum.cpp  WaypointEnum.h  main.cpp  main_header.h
web/: index.html
web/css/: style.css
web/data/: solver_state_01.json  solver_state_02.json  solver_state_03.json  solver_state_04.json  solver_state_05.json  solver_state_06.json  solver_state_07.json  solver_state_08.json  solver_state_09.json  solver_state_10.json  solver_state_11.json  solver_state_12.json  solver_state_13.json  solver_state_14.json  solver_state_15.json  solver_state_16.json  solver_state_17.json  solver_state_18.json  solver_state_19.json  solver_state_20.json
web/js/: app.js
(+18 files in other folders)
